--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,8 +39,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/administration, roles: ROLE_REPORTER }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_REPORTER
 
 when@test:
     security:
